--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -774,61 +774,34 @@
     </g>
   </symbol>
   <symbol id="dev-first" viewBox="0 0 70 70">
-    <g class="b">
-      <g class="b">
-        <g clip-path="url(#c)">
-          <path fill="none" stroke="#d3e3e5" d="M41.467 43.773V70"/>
-        </g>
-        <g clip-path="url(#d)">
-          <path fill="none" stroke="#d3e3e5" d="M19.513 57.999V70"/>
-        </g>
-        <g clip-path="url(#e)">
-          <path fill="none" stroke="#d3e3e5" d="M49.984.001v29.018"/>
-        </g>
-        <g clip-path="url(#f)">
-          <path fill="none" stroke="#d3e3e5" d="M25.8 28.614H9.343a2.12 2.12 0 01-2.12-2.12v-4.865A2.12 2.12 0 005.1 19.508H.006"/>
-        </g>
-        <g clip-path="url(#g)">
-          <path fill="none" stroke="#d3e3e5" d="M28.494 43.92v11.958A2.12 2.12 0 0126.375 58H7.616a2.12 2.12 0 00-2.12 2.12V70"/>
-        </g>
-        <g clip-path="url(#h)">
-          <path fill="none" stroke="#d3e3e5" d="M0 7.5h10.891a2.12 2.12 0 012.12 2.121v29.753a2.12 2.12 0 002.12 2.121h12.132"/>
-        </g>
-        <g clip-path="url(#i)">
-          <path fill="none" stroke="#d3e3e5" d="M28.467 17.424v-2.8a2.12 2.12 0 00-2.119-2.124H5.621A2.12 2.12 0 013.5 10.38V0"/>
-        </g>
-        <g clip-path="url(#j)">
-          <path fill="none" stroke="#d3e3e5" d="M40.494 17.664v-6.533a2.12 2.12 0 012.119-2.121H70"/>
-        </g>
-        <g clip-path="url(#k)">
-          <path fill="none" stroke="#d3e3e5" d="M69.957 40.994H52.579a2.109 2.109 0 00-2.118 2.106v17.777A2.331 2.331 0 0148.109 63H32.6a2.116 2.116 0 00-2.116 2.117V70"/>
-        </g>
-        <g clip-path="url(#l)">
-          <path fill="none" stroke="#d3e3e5" d="M19.449 12.2V4.62a2.117 2.117 0 012.116-2.12h11.3a2.117 2.117 0 012.117 2.12v15.512"/>
-        </g>
-        <g clip-path="url(#m)">
-          <path fill="none" stroke="#d3e3e5" d="M61.965 0v21.889a2.117 2.117 0 002.116 2.118H70"/>
-        </g>
-        <g clip-path="url(#n)">
-          <path stroke-width=".999" stroke="#d3e3e5" stroke-miterlimit="10" fill="none" d="M28.486 50.495H.006"/>
-        </g>
-        <path d="M38.479 62.993a3 3 0 103-3 3 3 0 00-3 3" fill="#ff8995"/>
-        <path fill="#438bad" d="M28.494 48a2.5 2.5 0 11-2.5 2.5 2.5 2.5 0 012.5-2.5"/>
-        <g clip-path="url(#o)">
-          <path fill="none" d="M49.985 29h8.357a2.12 2.12 0 012.12 2.121v20.735a2.12 2.12 0 002.12 2.12l7.377.018"/>
-        </g>
-        <path d="M57.433 40.985a3 3 0 113 3 3 3 0 01-3-3" fill="#93dce9"/>
-        <path fill="#ff5466" d="M19.492 15.5a3 3 0 10-3-3 3 3 0 003 3"/>
-        <path fill="#438bad" d="M49.971 11.5a2.5 2.5 0 112.5-2.5 2.5 2.5 0 01-2.5 2.5"/>
-        <path d="M10 28.5a3 3 0 113 3 3 3 0 01-3-3" fill="#82c2d5"/>
-        <path fill="#d3e3e5" d="M34.07 19.373h1.389a1.272 1.272 0 011.277 1.266l.011 2.838a11.8 11.8 0 014.872 2l2-2.019a1.27 1.27 0 011.8-.007l.986.978a1.273 1.273 0 01.007 1.8l-2 2.016a11.716 11.716 0 012.044 4.86l2.83-.011a1.272 1.272 0 011.277 1.267l.005 1.389a1.272 1.272 0 01-1.268 1.273l-2.829.012a11.719 11.719 0 01-2 4.879l2.013 2a1.273 1.273 0 01.006 1.8l-.978.986a1.27 1.27 0 01-1.8.007l-2.015-2a11.8 11.8 0 01-4.858 2.044l.011 2.832a1.272 1.272 0 01-1.266 1.277l-1.389.006a1.272 1.272 0 01-1.274-1.266l-.011-2.82A11.8 11.8 0 0128 44.8l-1.961 1.977a1.271 1.271 0 01-1.8.007l-.986-.979a1.272 1.272 0 01-.007-1.8l1.943-1.96a11.719 11.719 0 01-2.081-4.916l-2.737.011a1.272 1.272 0 01-1.277-1.266l-.005-1.39a1.271 1.271 0 011.266-1.277l2.738-.011a11.724 11.724 0 012.042-4.931l-1.961-1.946a1.272 1.272 0 01-.007-1.8l.978-.986a1.27 1.27 0 011.8-.007l1.979 1.964a11.8 11.8 0 014.894-2.02l-.018-2.82a1.272 1.272 0 011.266-1.277M42.6 35.086a7.822 7.822 0 10-7.791 7.829 7.81 7.81 0 007.791-7.829"/>
-        <path fill="#d3e3e5" d="M44.593 35.115a9.765 9.765 0 11-9.765-9.77 9.768 9.768 0 019.765 9.77"/>
-        <path d="M35.253 30.58l1.161-1.812a1.171 1.171 0 10-.7-.446l-1.442 2.251a4.594 4.594 0 10.977.007m-.528 7a2.439 2.439 0 112.28-3.3 1.408 1.408 0 100 1.729 2.438 2.438 0 01-2.278 1.571" fill="#34445b"/>
-        <path d="M43.476 18a3 3 0 11-3-3 3 3 0 013 3" fill="#fce393"/>
-        <path d="M16.494 57.994a3 3 0 103-3 3 3 0 00-3 3" fill="#fbd764"/>
-        <path fill="#438bad" d="M51.983 29.019a2 2 0 11-2-2 2 2 0 012 2"/>
-        <path fill="#d3e3e5" d="M30.485 18a2 2 0 11-2-2 2 2 0 012 2M5.5 7.5a2 2 0 11-2-2 2 2 0 012 2"/>
-        <path fill="#ff5466" d="M63.964 9.01a2 2 0 11-2-2 2 2 0 012 2"/>
+    <g transform="translate(-541.15 108.321)">
+      <path style="fill:none;stroke:#d3e3e5;stroke-miterlimit:10;opacity:.3" d="M582.646-63.04v24.73M560.677-52.813v14.503M591.169-108.32v29.023M554.291-79.7H550a2.12 2.12 0 01-2.121-2.12v-4.866a2.122 2.122 0 00-2.121-2.121h-4.6"/>
+      <path style="fill:none;stroke:#d3e3e5;stroke-miterlimit:10;opacity:.5" d="M569.664-66.815v11.881a2.122 2.122 0 01-2.121 2.121h-18.772a2.12 2.12 0 00-2.121 2.121v12.382M541.15-100.823h10.4a2.12 2.12 0 012.121 2.12v29.762a2.121 2.121 0 002.121 2.121h12.141"/>
+      <path style="fill:none;stroke:#d3e3e5;stroke-miterlimit:10;opacity:.3" d="M569.137-86.569V-93.7a2.121 2.121 0 00-2.121-2.121h-20.741a2.122 2.122 0 01-2.121-2.121v-10.38"/>
+      <path style="fill:none;stroke:#d3e3e5;stroke-miterlimit:10;opacity:.5" d="M581.672-92.748v-4.44a2.122 2.122 0 012.121-2.121H611.2"/>
+      <path style="fill:none;stroke:#d3e3e5;stroke-miterlimit:10;opacity:.3" d="M611.156-67.32h-17.39a2.11 2.11 0 00-2.119 2.108v17.779a2.332 2.332 0 01-2.354 2.117h-15.519a2.117 2.117 0 00-2.117 2.118v4.888"/>
+      <path style="fill:none;stroke:#d3e3e5;stroke-miterlimit:10;opacity:.15;" d="M560.613-96.118v-7.582a2.118 2.118 0 012.118-2.118h10.308a2.117 2.117 0 012.117 2.118v8.832a2.12 2.12 0 002.12 2.12h4.4M603.159-108.321v21.893a2.117 2.117 0 002.117 2.118h5.924"/>
+      <circle cx="3" cy="3" r="3" transform="translate(579.656 -48.318)" fill="#ff8995"/>
+      <path style="fill:none;stroke:#d3e3e5;stroke-miterlimit:10;opacity:.5" d="M591.169-79.312h8.363a2.12 2.12 0 012.121 2.12v20.735a2.122 2.122 0 002.121 2.121l7.382.018"/>
+      <circle cx="3" cy="3" r="3" transform="translate(598.623 -70.33)" fill="#93dce8"/>
+      <circle style="fill:#ff5466" cx="3" cy="3" r="3" transform="translate(557.656 -98.818)"/>
+      <circle cx="2.5" cy="2.5" r="2.5" transform="translate(588.656 -101.818)" fill="#438bad"/>
+      <circle cx="3" cy="3" r="3" transform="translate(550.656 -82.818)" fill="#81c1d5"/>
+      <circle cx="3" cy="3" r="3" transform="translate(578.656 -95.818)" fill="#fce392"/>
+      <circle style="fill:#fbd764" cx="3" cy="3" r="3" transform="translate(557.656 -55.818)"/>
+      <circle cx="2" cy="2" r="2" transform="translate(542.156 -102.818)" fill="#d3e3e5"/>
+      <circle style="fill:#ff5466" cx="2" cy="2" r="2" transform="translate(601.159 -101.309)"/>
+      <path style="fill:#3e3e3f" d="M592.174-63.322a2 2 0 01-2 2h-28a2 2 0 01-2-2v-19.217l1.819-1.53h28.363l1.818 1.53z"/>
+      <path d="M560.174-63.322a2 2 0 002 2H570l20.809-20.869-28.816-2.166-1.819 2.788z" fill="#5b5c5f"/>
+      <path style="fill:#f0f1f1" d="M563.048-67.322c0-1 .341-1.558 1-1.558s1 .56 1 1.558-.341 1.561-1 1.561-1-.559-1-1.561zm1.58 0c0-.88-.215-1.239-.582-1.239s-.582.359-.582 1.239.218 1.242.582 1.242.582-.359.582-1.242zm-.582-.285a.282.282 0 01.288.285.282.282 0 01-.288.288.282.282 0 01-.285-.288.282.282 0 01.285-.285zM566.657-68.386l-.722.438-.192-.28.962-.6h.354v2.69h.617v.324h-1.758v-.324h.739zM568.3-67.322c0-1 .341-1.558 1-1.558s1 .56 1 1.558-.341 1.561-1 1.561-1-.559-1-1.561zm1.58 0c0-.88-.215-1.239-.582-1.239s-.582.359-.582 1.239.219 1.242.582 1.242.579-.359.579-1.242zm-.582-.285a.283.283 0 01.289.285.283.283 0 01-.289.288.282.282 0 01-.285-.288.282.282 0 01.282-.285zM571.906-68.386l-.722.438-.192-.28.962-.6h.355v2.69h.616v.324h-1.758v-.324h.739zM574.531-68.386l-.722.438-.193-.28.963-.6h.354v2.69h.617v.324h-1.759v-.324h.74zM576.171-67.322c0-1 .341-1.558 1-1.558s1 .56 1 1.558-.342 1.561-1 1.561-1-.559-1-1.561zm1.579 0c0-.88-.214-1.239-.582-1.239s-.582.359-.582 1.239.219 1.242.582 1.242.582-.359.582-1.242zm-.582-.285a.283.283 0 01.289.285.283.283 0 01-.289.288.282.282 0 01-.284-.288.281.281 0 01.284-.285zM579.78-68.386l-.722.438-.193-.28.963-.6h.354v2.69h.617v.324h-1.759v-.324h.74zM581.42-67.322c0-1 .341-1.558 1-1.558s1 .56 1 1.558-.341 1.561-1 1.561-1-.559-1-1.561zm1.579 0c0-.88-.214-1.239-.582-1.239s-.581.359-.581 1.239.218 1.242.581 1.242.583-.359.583-1.242zm-.582-.285a.282.282 0 01.289.285.283.283 0 01-.289.288.282.282 0 01-.284-.288.281.281 0 01.284-.285zM585.029-68.386l-.722.438-.193-.28.963-.6h.354v2.69h.617v.324h-1.759v-.324h.74z"/>
+      <path style="fill:#3e3e3f" d="M592.174-84.569v3h-32v-3a2 2 0 012-2h28a2 2 0 012 2z"/>
+      <circle cx="1.25" cy="1.25" r="1.25" transform="translate(561.514 -85.268)" fill="#ff5f5a"/>
+      <circle style="fill:#fbd764" cx="1.25" cy="1.25" r="1.25" transform="translate(565.419 -85.268)"/>
+      <circle cx="1.25" cy="1.25" r="1.25" transform="translate(569.325 -85.268)" fill="#27b9d2"/>
+      <path style="stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:.625px" d="M566.154-78.862l-2.857 3 2.857 3M572.44-78.862l2.857 3-2.857 3M570.154-78.862l-2.285 6"/>
+      <g style="fill:none;stroke:#d3e3e5;stroke-miterlimit:10;opacity:.5" transform="translate(560.174 -86.569)">
+        <rect width="32" height="25.247" rx="2"/>
+        <rect x="-.5" y="-.5" width="33" height="26.247" rx="2.5" fill="none"/>
       </g>
     </g>
   </symbol>
