terms page update

--- a/app/views/web/ost/terms.html.erb
+++ b/app/views/web/ost/terms.html.erb
@@ -91,6 +91,11 @@
         These terms of use are governed by the laws in force in the Hong Kong Special Administrative Region of the People’s Republic of China and are subject to the exclusive jurisdiction of the courts in that place.
       </p>
 
+      <h5 class="mt-4 pt-2">Notice to Singapore Residents</h5>
+      <p>
+        OST.com Limited is not registered under Singapore's Payment Services (PS) Act of 2019 as (i) OST.com Limited. does not have a place of business or registered office in Singapore; and (ii) OST.com Limited. does not conduct activities in Singapore governed by the PS Act.  Users based in Singapore therefore should not consider themselves covered by the PS Act nor do they have any recourse against OST.com Limited under the PS Act.
+      </p>
+
       <h5 class="mt-4 pt-2">Questions?</h5>
       <p class="mb-5">
         Please contact us support@ost.com if you have any questions about our website
