Stop KYC changes

--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -15,7 +15,8 @@
           <ul class="footer-nav list-unstyled font-weight-normal">
             <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" title="Ost Platform">Ost Platform</a></li>
             <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" rel="noopener noreferrer nofollow" target="_blank" title="Ost VIEW">Ost VIEW</a></li>
-            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" title="Ost KYC">Ost KYC</a></li>
+            <%# KYC_STOP_CHANGES %>
+            <!-- <li><a href="<%#= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" title="Ost KYC">Ost KYC</a></li> -->
           </ul>
         </div>
         <div class="col-12 col-md mb-3 mb-sm-0">
