--- a/app/views/shared/web/common/_navbar.erb
+++ b/app/views/shared/web/common/_navbar.erb
@@ -40,8 +40,9 @@
                 View and analyze transactions across the OpenST side blockchains for a macro view of the OpenST ecosystem.
               </a>
             </li>
-            <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" class="p-0" title="OST - KYC">
+            <%# KYC_STOP_CHANGES %>
+            <!-- <li>
+              <a href="<%#= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" class="p-0" title="OST - KYC">
                 <svg class="ost-kyc-brand-nav-menu" width="80" height="16">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-kyc-brand-nav-menu"></use>
@@ -49,7 +50,7 @@
                 </svg>
                 The one place for your team to quickly review and process the KYC applications.
               </a>
-            </li>
+            </li> -->
           </ul>
         </li>
         <li class="nav-item dropdown nav-products">
