--- a/app/views/web/ost/index/_ost_kit.erb
+++ b/app/views/web/ost/index/_ost_kit.erb
@@ -56,6 +56,8 @@
             </div>
           </div>
         </div>
+        <%# KYC_STOP_CHANGES %>
+        <!--
         <div class="col-sm-12 col-md-4 d-flex my-3 my-md-5">
           <div class="container-1 rounded p-4 d-flex flex-column">
             <div style="flex: 1 1 auto">
@@ -67,10 +69,10 @@
               <p class="my-2">OST KYC as a service ensures that you are compliant with know your customer regulations.</p>
             </div>
             <div>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" class="text-link" title="Read More">Read More</a>
+              <a href="<%#= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" class="text-link" title="Read More">Read More</a>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
