--- a/app/views/web/ost/roadmap/mobile/_developer_tools.erb
+++ b/app/views/web/ost/roadmap/mobile/_developer_tools.erb
@@ -212,7 +212,8 @@
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OST OPTIMIZATION</div>
-      <div class="text-bold">OST KYC Integration</div>
+      <%# KYC_STOP_CHANGES %>
+      <!-- <div class="text-bold">OST KYC Integration</div> -->
       <div class="status">Status: <%= get_current_quater_roadmap_status(2020, 1) %></div>
     </div>
   </div>
