Pipe-drive integration with partner page -> Connect with us

--- a/app/views/web/ost/partners/_contact_us.erb
+++ b/app/views/web/ost/partners/_contact_us.erb
@@ -8,7 +8,7 @@
         </div>
       </div>
       <div class="row">
-        <form action="/api/home/partners/contact-us" class="custom-form col-10 col-md-6 col-xl-5 mx-auto" id="partners-contact-us-form">
+        <form action="/partners/contact-us" class="custom-form col-10 col-md-6 col-xl-5 mx-auto" id="partners-contact-us-form">
           <div class="input-container">
             <label>FULL NAME</label>
             <input class="input" id="full_name" type="text" name="full_name" value="" title="Full name" required autocomplete="off" />
